[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Guards/EliteGuard.png" type="Texture" id=1]
[ext_resource path="res://Src/Guard/EliteGuard/EliteGuard.gd" type="Script" id=2]
[ext_resource path="res://Src/Notifier/Notifier.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/SFX/eliteguard_taser.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/SFX/taser_deploy_eliteguard.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/SFX/taser_hit.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/SFX/sfx_footstep_new1.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/sfx_footstep_new3.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 12 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 15.6951 )

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "taser"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 9, 10 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 1.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EliteGuard/Footstep1:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EliteGuard/Footstep2:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="EliteGuard" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Flippable" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Flippable"]
position = Vector2( 0, -16 )
z_index = 53
texture = ExtResource( 1 )
hframes = 11
frame = 6

[node name="LineOfSight" type="Area2D" parent="Flippable"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flippable/LineOfSight"]
position = Vector2( 29, -16 )
shape = SubResource( 1 )

[node name="TaserRange" type="Area2D" parent="Flippable"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flippable/TaserRange"]
position = Vector2( 0, -16 )
shape = SubResource( 2 )

[node name="LOSRay" type="RayCast2D" parent="Flippable"]
position = Vector2( 10.8595, -16 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 129

[node name="Notifier" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 3 )
anims/taser = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="RoamingEnterTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="BackToNormal" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="EliteGuard" type="Node2D" parent="."]

[node name="Detect" type="AudioStreamPlayer2D" parent="EliteGuard"]
attenuation = 2.0
bus = "Sound"

[node name="TaserDeploy" type="AudioStreamPlayer2D" parent="EliteGuard"]
stream = ExtResource( 5 )
attenuation = 2.0
bus = "Sound"

[node name="Taser" type="AudioStreamPlayer2D" parent="EliteGuard"]
stream = ExtResource( 4 )
attenuation = 2.0
bus = "Sound"

[node name="TaserHit" type="AudioStreamPlayer2D" parent="EliteGuard"]
stream = ExtResource( 6 )
attenuation = 2.0
bus = "Sound"

[node name="Footstep1" type="AudioStreamPlayer2D" parent="EliteGuard"]
stream = ExtResource( 7 )
volume_db = -12.0
pitch_scale = 0.9
bus = "Sound"

[node name="Footstep2" type="AudioStreamPlayer2D" parent="EliteGuard"]
stream = ExtResource( 8 )
volume_db = -12.0
pitch_scale = 0.8
bus = "Sound"

[connection signal="timeout" from="BackToNormal" to="." method="_on_BackToNormal_timeout"]
